language/move-lang/tests/move_check/unit_test/expected_failure_bad_value.unit_test.exp
error[E10003]: invalid attribute value
  ┌─ tests/move_check/unit_test/expected_failure_bad_value.move:7:35
  │
7 │     #[expected_failure(abort_code=true)]
  │                        -----------^^^^
  │                        │          │
  │                        │          Invalid value in expected failure code assignment
  │                        Unsupported value in this assignment

error[E10003]: invalid attribute value
   ┌─ tests/move_check/unit_test/expected_failure_bad_value.move:11:35
   │
11 │     #[expected_failure(abort_code=x"")]
   │                        -----------^^^
   │                        │          │
   │                        │          Invalid value in expected failure code assignment
   │                        Unsupported value in this assignment

error[E10003]: invalid attribute value
   ┌─ tests/move_check/unit_test/expected_failure_bad_value.move:15:35
   │
15 │     #[expected_failure(abort_code=b"")]
   │                        -----------^^^
   │                        │          │
   │                        │          Invalid value in expected failure code assignment
   │                        Unsupported value in this assignment

error[E10003]: invalid attribute value
   ┌─ tests/move_check/unit_test/expected_failure_bad_value.move:19:35
   │
19 │     #[expected_failure(abort_code=Foo)]
   │                        -----------^^^
   │                        │          │
   │                        │          Invalid value in expected failure code assignment
   │                        Unsupported value in this assignment

error[E10003]: invalid attribute value
   ┌─ tests/move_check/unit_test/expected_failure_bad_value.move:23:35
   │
23 │     #[expected_failure(abort_code=@0xC0FFEE)]
   │                        -----------^^^^^^^^^
   │                        │          │
   │                        │          Invalid value in expected failure code assignment
   │                        Unsupported value in this assignment

